# tui-calculator

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  skills-lock.json
.agents/skills/rust-async-patterns/references/: details.md
.claude/: settings.json
docs/: TASKS.md  design.md  progress.md
docs/tasks/: app-display-split.md  app-result-state.md  app-state.md  app-ui-state.md  button-nav.md  copy-clipboard.md  eval-parser.md  key-input.md  layout-auto.md  layout-config.md  layout-registry.md  mouse-input.md  paste-input.md  quick-input.md  rainbow-mode.md  tui-skeleton.md  ui-buttons.md  ui-display.md  web-ratzilla.md
src/: action.rs  app.rs  eval.rs  layout.rs  main.rs  ui.rs  ui_state.rs
